--- a/src/com/dabomstew/pkrandom/newgui/NewRandomizerGUI.form
+++ b/src/com/dabomstew/pkrandom/newgui/NewRandomizerGUI.form
@@ -3770,7 +3770,7 @@
                       <enabled value="false"/>
                       <font name="Consolas" size="32"/>
                       <foreground color="-14342875"/>
-                      <opaque value="false"/>
+                      <opaque value="true"/>
                     </properties>
                     <clientProperties>
                       <JEditorPane.honorDisplayProperties class="java.lang.Boolean" value="false"/>
