--- a/src/com/dabomstew/pkrandom/newgui/NewRandomizerGUI.form
+++ b/src/com/dabomstew/pkrandom/newgui/NewRandomizerGUI.form
@@ -3754,7 +3754,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <scrollpane id="66b7">
+              <scrollpane id="66b7" binding="sScriptInputScrollPane" custom-create="true">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
