--- a/src/com/dabomstew/pkrandom/newgui/NewRandomizerGUI.form
+++ b/src/com/dabomstew/pkrandom/newgui/NewRandomizerGUI.form
@@ -3800,7 +3800,7 @@
               </vspacer>
             </children>
           </grid>
-          <grid id="ccd2" binding="scriptingPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="ccd2" binding="scriptingPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Scripting">
@@ -3810,27 +3810,42 @@
             <properties/>
             <border type="none"/>
             <children>
-              <scrollpane id="66b7" binding="sScriptInputScrollPane" custom-create="true">
+              <scrollpane id="f4a5c" class="org.fife.ui.rtextarea.RTextScrollPane" binding="sScriptInputScrollPane">
                 <constraints>
-                  <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="9" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <foreground color="-4473925"/>
+                  <font name="Consolas" size="32"/>
+                  <iconRowHeaderEnabled value="true"/>
+                  <lineNumbersEnabled value="true"/>
                 </properties>
                 <border type="none"/>
                 <children>
-                  <component id="dd825" class="javax.swing.JTextPane" binding="sScriptInput" custom-create="true">
+                  <component id="6adf2" class="org.fife.ui.rsyntaxtextarea.RSyntaxTextArea" binding="sScriptInput">
                     <constraints/>
                     <properties>
+                      <background color="-13750738"/>
                       <caretColor color="-1"/>
+                      <codeFoldingEnabled value="true"/>
+                      <currentLineHighlightColor color="-11454665"/>
                       <enabled value="false"/>
+                      <fadeCurrentLineHighlight value="true"/>
                       <font name="Consolas" size="32"/>
-                      <foreground color="-14342875"/>
+                      <foreground color="-1"/>
+                      <inheritsPopupMenu value="true"/>
+                      <marginLineEnabled value="false"/>
+                      <markOccurrences value="true"/>
+                      <markOccurrencesColor color="-10197916"/>
+                      <markOccurrencesDelay value="10"/>
                       <opaque value="true"/>
+                      <paintMarkOccurrencesBorder value="true"/>
+                      <paintMatchedBracketPair value="true"/>
+                      <paintTabLines value="true"/>
+                      <selectedTextColor color="-8882041"/>
+                      <selectionColor color="-6908241"/>
+                      <showMatchedBracketPopup value="true"/>
+                      <syntaxEditingStyle value="text/python"/>
                     </properties>
-                    <clientProperties>
-                      <JEditorPane.honorDisplayProperties class="java.lang.Boolean" value="false"/>
-                    </clientProperties>
                   </component>
                 </children>
               </scrollpane>
